[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy_chatgpt"
version = "0.1.0"
description = "macOS Safari/Chrome automation for ChatGPT"
authors = [
  {name = "Vid", email = "vid@example.com"}
]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
  "beautifulsoup4>=4.6"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["example.py", "tests*", "build*", "dist*", ".*"]
